--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,15 @@
     <meta name="image" content="images/pcmmh5.jpg">
     <meta name="url" content="https://motormentorhub.netlify.app/">
     <meta name="type" content="website">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9MFNWF365R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9MFNWF365R');
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
