robot and canonical

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="images/mmhLogo.ico" />
+    <link rel="canonical" href="https://motormentorhub.com.ng/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#EDF2F4" />
     <meta name="title" content="MotorMentorHub - Steering You Through the World of Cars">
     <meta name="description" content="Explore in-depth car reviews, maintenance tips, and the latest news on electric vehicles and more at MotorMentorHub.">
     <meta name="image" content="images/pcmmh5.jpg">
-    <meta name="url" content="https://motormentorhub.netlify.app/">
+    <meta name="url" content="https://motormentorhub.com.ng/">
     <meta name="type" content="website">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9MFNWF365R"></script>
