trying to remove adsense tags

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <meta name="image" content="images/pcmmh5.jpg">
     <meta name="url" content="https://motormentorhub.com.ng/">
     <meta name="type" content="website">
+    <!-- AdSense script  -->
+     
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9MFNWF365R"></script>
     <script>
