used meta tag now it works fine

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
     <meta name="image" content="images/pcmmh5.jpg">
     <meta name="url" content="https://motormentorhub.com.ng/">
     <meta name="type" content="website">
-    <!-- AdSense script  -->
-     
+    <!-- AdSense meta tag  -->
+    <meta name="google-adsense-account" content="ca-pub-2885959714607738">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-9MFNWF365R"></script>
     <script>
